--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
         env:
           VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}  
         run: |
-          sed -i "s|publicPath: '/'|publicPath: 'https://cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/'|" customConfig.ts
-          sed -i "s|favicon: '/favicon.png'|favicon: 'https://cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/favicon.png'|" customConfig.ts
+          sed -i "s|publicPath: '/'|publicPath: '//cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/'|" customConfig.ts
+          sed -i "s|favicon: '/favicon.png'|favicon: '//cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/favicon.png'|" customConfig.ts
           cat customConfig.ts
           npm install
           npm run build
