--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "baseUrl": "./",
-    "strict": true,
+    "strict": false,
+    "allowJs": true,
     "paths": {
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
