--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "version": "v0.0.13",
-  "private": true,
+  "name": "hznuoj-v3-webapp",
+  "version": "0.0.14",
+  "description": "The WebApp of HZNUOJ V3",
+  "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
+  "author": "Dup4",
+  "license": "MIT",
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
@@ -22,14 +26,17 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@types/validator": "^13.1.3",
     "@umijs/preset-react": "1.x",
     "antd": "^4.12.3",
+    "class-validator": "^0.13.1",
     "highcharts": "^9.0.1",
     "highcharts-react-official": "^3.0.0",
     "monaco-editor-webpack-plugin": "^3.0.0",
     "react-highlight-words": "^0.17.0",
     "react-monaco-editor": "^0.42.0",
-    "umi": "^3.3.7"
+    "umi": "^3.3.7",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@types/react": "^16.9.0",
