--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -30,6 +30,7 @@
     "@umijs/preset-react": "1.x",
     "antd": "^4.12.3",
     "class-validator": "^0.13.1",
+    "dayjs": "^1.10.4",
     "highcharts": "^9.0.1",
     "highcharts-react-official": "^3.0.0",
     "monaco-editor-webpack-plugin": "^3.0.0",
