--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.25",
+  "version": "0.0.26",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -9,7 +9,7 @@
     "start": "umi dev",
     "build": "umi build",
     "postinstall": "umi generate tmp",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
+    "prettier": "prettier --write 'src/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.3.7",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
@@ -49,5 +50,8 @@
     "react-dom": "17.x",
     "typescript": "^4.1.2",
     "yorkie": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=14.15.5"
   }
 }
