--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
   "singleQuote": false,
   "trailingComma": "all",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
   "printWidth": 80,
   "overrides": [
     {
