--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Dup4",
   "license": "MIT",
   "scripts": {
-    "start": "umi dev",
+    "start": "cross-env umi dev",
+    "start:no-mock": "cross-env MOCK=none umi dev",
+    "start:no-ui": "cross-env UMI_UI=none umi dev",
     "build": "umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write 'src/**/*.{js,jsx,tsx,less,md,json}' && prettier --write --parser=typescript 'src/**/*.ts?(x)'",
@@ -44,6 +46,7 @@
     "@types/react-dom": "^16.9.0",
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.3.7",
+    "cross-env": "^7.0.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "react": "17.x",
