--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build
 on:
   workflow_dispatch:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,19 +26,10 @@ jobs:
           python-version: 3.8
           architecture: 'x64' # (x64 or x86)
 
-      - name: Get Version ID
-        id: get-version-id
-        run: |
-          VERSION_ID=$(cat package.json | grep version | sed 's|  \"version\": \"||g' | sed 's|\",||g')
-          echo "::set-output name=version-id::$(echo $VERSION_ID)"
-          echo $VERSION_ID
-
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         env:
           VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}  
         run: |
-          sed -i "s|publicPath: '/'|publicPath: '//cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/'|" customConfig.ts
-          sed -i "s|favicon: '/favicon.png'|favicon: '//cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/favicon.png'|" customConfig.ts
           sed -i "s|baidu: ''|baidu: '${{ secrets.BAIDU_ANALYTICS_ID }}'|" customConfig.ts 
           cat customConfig.ts
           bash scripts/get_amazeui.sh
@@ -50,34 +41,15 @@ jobs:
         uses: Dup4/minify-html-action@v9
         with:
           src: './dist/index.html'
+
+      - name: Enable 404.html
+        run: |
+          cp ./dist/index.html ./dist/404.html
           
       - name: Release
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
+          BRANCH: preview # The branch the action should deploy to.
           FOLDER: dist # The folder the action should deploy.
           CLEAN: true # Automatically remove deleted files from the deploy branch
-
-      - name: Create Release # 创建Release，可以在仓库看到一个个版本
-        id: create_release
-        uses: actions/create-release@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-          VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}
-        with:
-          commitish: gh-pages
-          tag_name: ${{ env.VERSION_ID }}
-          release_name: Release ${{ env.VERSION_ID }}
-          draft: false # 是否是草稿
-          prerelease: false # 是否是预发布
-
-      - name: Deploy
-        uses: appleboy/ssh-action@master # 使用ssh链接服务器
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          script: | 
-            ${{ secrets.RUN_SCRIPT }}
