--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,29 +1,84 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CD
-
-# Controls when the action will run. 
 on:
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  cd:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+        with:
+          persist-credentials: false
+      
+      - name: Set up Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+          architecture: 'x64' # (x64 or x86)
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Get Version ID
+        id: get-version-id
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          VERSION_ID=$(cat package.json | grep version | sed 's|  \"version\": \"||g' | sed 's|\",||g')
+          echo "::set-output name=version-id::$(echo $VERSION_ID)"
+          echo $VERSION_ID
+
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        env:
+          VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}  
+        run: |
+          sed -i "s|publicPath: '/'|publicPath: '//cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/'|" customConfig.ts
+          sed -i "s|favicon: '/favicon.png'|favicon: '//cdn.jsdelivr.net/gh/HZNU-OJ/HZNUOJ-V3-WebApp@${{ env.VERSION_ID }}/favicon.png'|" customConfig.ts
+          sed -i "s|baidu: ''|baidu: '${{ secrets.BAIDU_ANALYTICS_ID }}'|" customConfig.ts 
+          cat customConfig.ts
+          bash scripts/get_amazeui.sh
+          npm install
+          export NODE_OPTIONS="--max-old-space-size=4096"
+          npm run build
+
+      - name: Minify HTML Index
+        uses: Dup4/minify-html-action@v9
+        with:
+          src: './dist/index.html'
+
+      - name: Enable 404.html
+        run: |
+          cp ./dist/index.html ./dist/404.html
+          
+      - name: Release
+        uses: JamesIves/github-pages-deploy-action@3.6.2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: dist # The folder the action should deploy.
+          CLEAN: true # Automatically remove deleted files from the deploy branch
+
+      - name: Create Release # 创建Release，可以在仓库看到一个个版本
+        id: create_release
+        uses: actions/create-release@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          VERSION_ID: ${{ steps.get-version-id.outputs.version-id }}
+        with:
+          commitish: gh-pages
+          tag_name: ${{ env.VERSION_ID }}
+          release_name: Release ${{ env.VERSION_ID }}
+          draft: false # 是否是草稿
+          prerelease: false # 是否是预发布
+
+      - name: Deploy
+        uses: appleboy/ssh-action@master # 使用ssh链接服务器
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: | 
+            ${{ secrets.RUN_SCRIPT }}
