--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "dayjs": "^1.10.4",
     "highcharts": "^9.0.1",
     "highcharts-react-official": "^3.0.0",
+    "markdown-it": "^12.0.4",
+    "markdown-it-math-loose": "^4.1.1",
+    "markdown-it-mentions": "^1.0.0",
+    "markdown-it-merge-cells": "^1.0.1",
+    "mathjax-full": "^3.1.2",
     "monaco-editor-webpack-plugin": "^3.0.0",
     "react-highlight-words": "^0.17.0",
     "react-monaco-editor": "^0.42.0",
