--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
       - name: Invoke workflow in another repo with inputs
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: Preview
+          workflow: Sync
           repo: HZNU-OJ/HZNUOJ-V3-WebApp-Preview
           token: ${{ secrets.GH_TOKEN }}
