--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,9 @@ on:
       - main
 
 jobs:
-  build:
+  sync:
     runs-on: ubuntu-latest
     steps:
-
       - name: Invoke workflow in another repo with inputs
         uses: benc-uk/workflow-dispatch@v1
         with:
@@ -17,6 +16,9 @@ jobs:
           repo: HZNU-OJ/HZNUOJ-V3-WebApp-Preview
           token: ${{ secrets.GH_TOKEN }}
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
