--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.29",
+  "version": "0.0.29.1",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "@hackmd/markdown-it-task-lists": "^2.1.1",
     "@types/validator": "^13.1.3",
     "@umijs/preset-react": "1.x",
     "antd": "^4.12.3",
@@ -43,8 +44,11 @@
     "monaco-editor-webpack-plugin": "^3.0.0",
     "react-highlight-words": "^0.17.0",
     "react-monaco-editor": "^0.42.0",
+    "twemoji": "^13.0.1",
     "umi": "^3.3.7",
-    "validator": "^13.5.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.5.2",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "@types/react": "^16.9.0",
