--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.29.5",
+  "version": "0.0.29.6",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -10,6 +10,7 @@
     "start:no-mock": "cross-env MOCK=none umi dev",
     "start:no-ui": "cross-env UMI_UI=none umi dev",
     "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 umi build",
+    "generate-api": "node scripts/generate-api.js http://localhost:3000/api/docs-json",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write 'src/**/*.{js,jsx,tsx,less,md,json}' && prettier --write --parser=typescript 'src/**/*.ts?(x)'",
     "test": "umi-test",
@@ -32,6 +33,7 @@
     "@types/validator": "^13.1.3",
     "@umijs/preset-react": "1.x",
     "antd": "^4.12.3",
+    "axios": "^0.21.1",
     "class-validator": "^0.13.1",
     "dayjs": "^1.10.4",
     "highcharts": "^9.0.1",
@@ -56,7 +58,7 @@
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.3.7",
     "cross-env": "^7.0.3",
-    "dtsgenerator": "^3.7.1",
+    "dtsgenerator": "2.7.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "react": "17.x",
