--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.31.2",
+  "version": "0.0.32",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -34,6 +34,7 @@
     "@umijs/preset-react": "1.x",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
+    "blueimp-md5": "^2.18.0",
     "class-validator": "^0.13.1",
     "dayjs": "^1.10.4",
     "highcharts": "^9.0.1",
@@ -54,6 +55,7 @@
     "xss": "^1.0.8"
   },
   "devDependencies": {
+    "@types/blueimp-md5": "^2.7.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@umijs/preset-ui": "^2.2.9",
