--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.36.0",
+  "version": "0.0.36.1",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -45,6 +45,7 @@
     "markdown-it-merge-cells": "^1.0.1",
     "mathjax-full": "^3.1.2",
     "monaco-editor-webpack-plugin": "^3.0.0",
+    "prismjs": "^1.23.0",
     "react-google-recaptcha-v3": "^1.8.0",
     "react-highlight-words": "^0.17.0",
     "react-monaco-editor": "^0.42.0",
@@ -57,11 +58,14 @@
   "devDependencies": {
     "@types/blueimp-md5": "^2.7.0",
     "@types/markdown-it": "^12.0.1",
+    "@types/prismjs": "^1.16.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^8.3.0",
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.3.7",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-prismjs": "^2.0.1",
     "cross-env": "^7.0.3",
     "dtsgenerator": "2.7.0",
     "lint-staged": "^10.0.7",
