--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.36.4",
+  "version": "0.0.36.5",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -76,6 +76,7 @@
     "react": "17.x",
     "react-dom": "17.x",
     "typescript": "^4.1.2",
+    "webpack": "^5.24.4",
     "yorkie": "^2.0.0"
   },
   "engines": {
