--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,8 @@ jobs:
         run: |
           cat customConfig.ts
           bash scripts/get_amazeui.sh
-          npm install
-          npm run build
+          yarn
+          yarn build
 
       - name: Minify HTML Index
         uses: Dup4/minify-html-action@v9
