--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
+    "markdown-it-toc-and-anchor": "^4.2.0",
     "mathjax-full": "^3.1.2",
     "monaco-editor-webpack-plugin": "^3.0.0",
     "prismjs": "^1.23.0",
