--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.38",
+  "version": "0.0.39",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -40,6 +40,7 @@
     "highcharts": "^9.0.1",
     "highcharts-react-official": "^3.0.0",
     "markdown-it": "^12.0.4",
+    "markdown-it-container": "^3.0.0",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@types/blueimp-md5": "^2.7.0",
     "@types/markdown-it": "^12.0.1",
+    "@types/markdown-it-container": "^2.0.3",
     "@types/prismjs": "^1.16.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
