--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.47.0",
+  "version": "0.0.47.1",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -49,9 +49,11 @@
     "mathjax-full": "^3.1.2",
     "monaco-editor-webpack-plugin": "^3.0.0",
     "prismjs": "^1.23.0",
+    "react-calendar-heatmap": "^1.8.1",
     "react-google-recaptcha-v3": "^1.8.0",
     "react-highlight-words": "^0.17.0",
     "react-monaco-editor": "^0.42.0",
+    "react-tooltip": "^4.2.15",
     "twemoji": "^13.0.1",
     "umi": "^3.3.7",
     "uuid": "^8.3.2",
@@ -64,7 +66,9 @@
     "@types/markdown-it-container": "^2.0.3",
     "@types/prismjs": "^1.16.3",
     "@types/react": "^16.9.0",
+    "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-tooltip": "^4.2.4",
     "@types/uuid": "^8.3.0",
     "@umijs/preset-ui": "^2.2.9",
     "@umijs/test": "^3.3.7",
