--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.57.13",
+  "version": "0.0.58",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -30,9 +30,12 @@
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
+    "@types/array-move": "^2.0.0",
+    "@types/react-sortable-hoc": "^0.7.1",
     "@types/validator": "^13.1.3",
     "@umijs/preset-react": "1.x",
     "antd": "^4.12.3",
+    "array-move": "^3.0.1",
     "axios": "^0.21.1",
     "blueimp-md5": "^2.18.0",
     "class-validator": "^0.13.1",
@@ -53,6 +56,7 @@
     "react-google-recaptcha-v3": "^1.8.0",
     "react-highlight-words": "^0.17.0",
     "react-monaco-editor": "^0.42.0",
+    "react-sortable-hoc": "^2.0.0",
     "react-tooltip": "^4.2.15",
     "twemoji": "^13.0.1",
     "umi": "^3.3.7",
