--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.59.1",
+  "version": "0.0.59.2",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -28,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@ahooksjs/use-url-state": "^2.5.6",
     "@ant-design/pro-layout": "^6.5.0",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
     "@types/array-move": "^2.0.0",
