--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.59.4",
+  "version": "0.0.59.5",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -52,6 +52,7 @@
     "markdown-it-toc-and-anchor": "^4.2.0",
     "mathjax-full": "^3.1.2",
     "monaco-editor-webpack-plugin": "^3.0.0",
+    "p-all": "^3.0.0",
     "prismjs": "^1.23.0",
     "react-calendar-heatmap": "^1.8.1",
     "react-google-recaptcha-v3": "^1.8.0",
