--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.61.0",
+  "version": "0.0.61.1",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -35,6 +35,7 @@
     "@types/react-sortable-hoc": "^0.7.1",
     "@types/validator": "^13.1.3",
     "@umijs/preset-react": "1.x",
+    "ansi_up": "^5.0.0",
     "antd": "^4.12.3",
     "array-move": "^3.0.1",
     "axios": "^0.21.1",
