--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hznuoj-v3-webapp",
-  "version": "0.0.64.7",
+  "version": "0.0.65",
   "description": "The WebApp of HZNUOJ V3",
   "repository": "https://github.com/HZNU-OJ/HZNUOJ-V3-WebApp",
   "author": "Dup4",
@@ -32,6 +32,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
     "@types/array-move": "^2.0.0",
+    "@types/react-dnd": "^3.0.2",
     "@types/react-sortable-hoc": "^0.7.1",
     "@types/validator": "^13.1.3",
     "@umijs/preset-react": "1.x",
@@ -45,6 +46,7 @@
     "dayjs": "^1.10.4",
     "highcharts": "^9.0.1",
     "highcharts-react-official": "^3.0.0",
+    "immutability-helper": "^3.1.1",
     "markdown-it": "^12.0.4",
     "markdown-it-container": "^3.0.0",
     "markdown-it-math-loose": "^4.1.1",
@@ -56,6 +58,8 @@
     "p-all": "^3.0.0",
     "prismjs": "^1.23.0",
     "react-calendar-heatmap": "^1.8.1",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-google-recaptcha-v3": "^1.8.0",
     "react-highlight-words": "^0.17.0",
     "react-monaco-editor": "^0.42.0",
@@ -69,11 +73,13 @@
   },
   "devDependencies": {
     "@types/blueimp-md5": "^2.7.0",
+    "@types/immutability-helper": "^2.6.3",
     "@types/markdown-it": "^12.0.1",
     "@types/markdown-it-container": "^2.0.3",
     "@types/prismjs": "^1.16.3",
     "@types/react": "^17.0.3",
     "@types/react-calendar-heatmap": "^1.6.2",
+    "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-tooltip": "^4.2.4",
     "@types/uuid": "^8.3.0",
