--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,37 +6,21 @@ on:
       - main
 
 jobs:
-  sync:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Invoke workflow in another repo with inputs
-        uses: benc-uk/workflow-dispatch@v1
-        with:
-          workflow: Sync
-          repo: HZNU-OJ/HZNUOJ-V3-WebApp-Preview
-          token: ${{ secrets.GH_TOKEN }}
-
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+        uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
-      
-      - name: Set up Node.js 14.x
+
+      - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 16
           registry-url: https://registry.npmjs.org/
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
-          architecture: 'x64' # (x64 or x86)
-
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Install and Build 🔧
         run: |
           cat customConfig.ts
           bash scripts/get_amazeui.sh
