chore: get amazeui postinstall

--- a/package.json
+++ b/package.json
@@ -1,105 +1,105 @@
 {
-  "name": "@judgeq/ui",
-  "version": "0.0.74.18",
-  "description": "The WebApp of JudgeQ",
-  "repository": "https://github.com/JudgeQ-Dev/JudgeQ-WebApp",
-  "author": "Dup4",
-  "license": "AGPL-3.0",
-  "scripts": {
-    "start": "cross-env umi dev",
-    "start:no-mock": "cross-env MOCK=none umi dev",
-    "start:no-ui": "cross-env UMI_UI=none umi dev",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 umi build",
-    "generate-api": "node scripts/generate-api.js http://localhost:3000/api/docs-json",
-    "postinstall": "umi generate tmp",
-    "prettier": "prettier --write 'src/**/*.{js,jsx,tsx,less,md,json}' && prettier --write --parser=typescript 'src/**/*.ts?(x)'",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --parser=typescript --write"
-    ]
-  },
-  "dependencies": {
-    "@ahooksjs/use-url-state": "^2.5.6",
-    "@ant-design/pro-layout": "^6.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@hackmd/markdown-it-task-lists": "^2.1.1",
-    "@types/array-move": "^2.0.0",
-    "@types/react-dnd": "^3.0.2",
-    "@types/react-sortable-hoc": "^0.7.1",
-    "@types/validator": "^13.1.3",
-    "@umijs/preset-react": "1.x",
-    "ansi_up": "^5.0.0",
-    "antd": "^4.12.3",
-    "array-move": "^3.0.1",
-    "axios": "^0.21.1",
-    "blueimp-md5": "^2.18.0",
-    "class-validator": "^0.13.1",
-    "css-element-queries": "^1.2.3",
-    "dayjs": "^1.10.4",
-    "highcharts": "^9.0.1",
-    "highcharts-react-official": "^3.0.0",
-    "immutability-helper": "^3.1.1",
-    "markdown-it": "^12.0.4",
-    "markdown-it-container": "^3.0.0",
-    "markdown-it-math-loose": "^4.1.1",
-    "markdown-it-mentions": "^1.0.0",
-    "markdown-it-merge-cells": "^1.0.1",
-    "markdown-it-toc-and-anchor": "^4.2.0",
-    "mathjax-full": "^3.1.2",
-    "monaco-editor-webpack-plugin": "^3.0.0",
-    "p-all": "^3.0.0",
-    "prismjs": "^1.23.0",
-    "react-calendar-heatmap": "^1.8.1",
-    "react-dnd": "^14.0.2",
-    "react-dnd-html5-backend": "^14.0.0",
-    "react-google-recaptcha-v3": "^1.8.0",
-    "react-highlight-words": "^0.17.0",
-    "react-monaco-editor": "^0.42.0",
-    "react-sortable-hoc": "^2.0.0",
-    "react-tooltip": "^4.2.15",
-    "twemoji": "^13.0.1",
-    "umi": "^3.3.7",
-    "uuid": "^8.3.2",
-    "validator": "^13.5.2",
-    "xss": "^1.0.8"
-  },
-  "devDependencies": {
-    "@types/blueimp-md5": "^2.7.0",
-    "@types/immutability-helper": "^2.6.3",
-    "@types/markdown-it": "^12.0.1",
-    "@types/markdown-it-container": "^2.0.3",
-    "@types/prismjs": "^1.16.3",
-    "@types/react": "^17.0.3",
-    "@types/react-calendar-heatmap": "^1.6.2",
-    "@types/react-dnd-html5-backend": "^3.0.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-tooltip": "^4.2.4",
-    "@types/uuid": "^8.3.0",
-    "@umijs/preset-ui": "^2.2.9",
-    "@umijs/test": "^3.3.7",
-    "babel-plugin-import": "^1.13.3",
-    "babel-plugin-prismjs": "^2.0.1",
-    "cross-env": "^7.0.3",
-    "dtsgenerator": "2.7.0",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.0",
-    "react": "17.x",
-    "react-dom": "17.x",
-    "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
-  },
-  "engines": {
-    "node": ">=16.11.0"
-  }
+    "name": "@judgeq/ui",
+    "version": "0.0.74.18",
+    "description": "The WebApp of JudgeQ",
+    "repository": "https://github.com/JudgeQ-Dev/JudgeQ-WebApp",
+    "author": "Dup4",
+    "license": "AGPL-3.0",
+    "scripts": {
+        "start": "cross-env umi dev",
+        "start:no-mock": "cross-env MOCK=none umi dev",
+        "start:no-ui": "cross-env UMI_UI=none umi dev",
+        "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 umi build",
+        "generate-api": "node scripts/generate-api.js http://localhost:3000/api/docs-json",
+        "postinstall": "bash scripts/get_amazeui.sh && umi generate tmp",
+        "prettier": "prettier --write 'src/**/*.{js,jsx,tsx,less,md,json}' && prettier --write --parser=typescript 'src/**/*.ts?(x)'",
+        "test": "umi-test",
+        "test:coverage": "umi-test --coverage"
+    },
+    "gitHooks": {
+        "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+        "*.{js,jsx,less,md,json}": [
+            "prettier --write"
+        ],
+        "*.ts?(x)": [
+            "prettier --parser=typescript --write"
+        ]
+    },
+    "dependencies": {
+        "@ahooksjs/use-url-state": "^2.5.6",
+        "@ant-design/pro-layout": "^6.5.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/react-fontawesome": "^0.1.14",
+        "@hackmd/markdown-it-task-lists": "^2.1.1",
+        "@types/array-move": "^2.0.0",
+        "@types/react-dnd": "^3.0.2",
+        "@types/react-sortable-hoc": "^0.7.1",
+        "@types/validator": "^13.1.3",
+        "@umijs/preset-react": "1.x",
+        "ansi_up": "^5.0.0",
+        "antd": "^4.12.3",
+        "array-move": "^3.0.1",
+        "axios": "^0.21.1",
+        "blueimp-md5": "^2.18.0",
+        "class-validator": "^0.13.1",
+        "css-element-queries": "^1.2.3",
+        "dayjs": "^1.10.4",
+        "highcharts": "^9.0.1",
+        "highcharts-react-official": "^3.0.0",
+        "immutability-helper": "^3.1.1",
+        "markdown-it": "^12.0.4",
+        "markdown-it-container": "^3.0.0",
+        "markdown-it-math-loose": "^4.1.1",
+        "markdown-it-mentions": "^1.0.0",
+        "markdown-it-merge-cells": "^1.0.1",
+        "markdown-it-toc-and-anchor": "^4.2.0",
+        "mathjax-full": "^3.1.2",
+        "monaco-editor-webpack-plugin": "^3.0.0",
+        "p-all": "^3.0.0",
+        "prismjs": "^1.23.0",
+        "react-calendar-heatmap": "^1.8.1",
+        "react-dnd": "^14.0.2",
+        "react-dnd-html5-backend": "^14.0.0",
+        "react-google-recaptcha-v3": "^1.8.0",
+        "react-highlight-words": "^0.17.0",
+        "react-monaco-editor": "^0.42.0",
+        "react-sortable-hoc": "^2.0.0",
+        "react-tooltip": "^4.2.15",
+        "twemoji": "^13.0.1",
+        "umi": "^3.3.7",
+        "uuid": "^8.3.2",
+        "validator": "^13.5.2",
+        "xss": "^1.0.8"
+    },
+    "devDependencies": {
+        "@types/blueimp-md5": "^2.7.0",
+        "@types/immutability-helper": "^2.6.3",
+        "@types/markdown-it": "^12.0.1",
+        "@types/markdown-it-container": "^2.0.3",
+        "@types/prismjs": "^1.16.3",
+        "@types/react": "^17.0.3",
+        "@types/react-calendar-heatmap": "^1.6.2",
+        "@types/react-dnd-html5-backend": "^3.0.2",
+        "@types/react-dom": "^16.9.0",
+        "@types/react-tooltip": "^4.2.4",
+        "@types/uuid": "^8.3.0",
+        "@umijs/preset-ui": "^2.2.9",
+        "@umijs/test": "^3.3.7",
+        "babel-plugin-import": "^1.13.3",
+        "babel-plugin-prismjs": "^2.0.1",
+        "cross-env": "^7.0.3",
+        "dtsgenerator": "2.7.0",
+        "lint-staged": "^10.0.7",
+        "prettier": "^2.2.0",
+        "react": "17.x",
+        "react-dom": "17.x",
+        "typescript": "^4.1.2",
+        "yorkie": "^2.0.0"
+    },
+    "engines": {
+        "node": ">=16.11.0"
+    }
 }
