--- a/.prettierignore
+++ b/.prettierignore
@@ -2,7 +2,7 @@
 **/*.svg
 **/*.ejs
 **/*.html
-package.json
+
 .umi
 .umi-production
 .umi-test
@@ -12,4 +12,6 @@ package.json
 /scripts
 /node_modules
 
-*.json
+package.json
+*.yml
+*.yaml
