--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "repository": "https://github.com/JudgeQ-Dev/JudgeQ-WebApp",
     "author": "Dup4",
     "license": "AGPL-3.0",
+    "engines": {
+        "node": ">=16.11.0"
+    },
     "scripts": {
         "start": "cross-env umi dev",
         "start:no-mock": "cross-env MOCK=none umi dev",
@@ -15,17 +18,6 @@
         "prettier": "prettier --write 'src/**/*.{js,jsx,tsx,less,md,json}' && prettier --write --parser=typescript 'src/**/*.ts?(x)'",
         "test": "umi-test",
         "test:coverage": "umi-test --coverage"
-    },
-    "gitHooks": {
-        "pre-commit": "lint-staged"
-    },
-    "lint-staged": {
-        "*.{js,jsx,less,md,json}": [
-            "prettier --write"
-        ],
-        "*.ts?(x)": [
-            "prettier --parser=typescript --write"
-        ]
     },
     "dependencies": {
         "@ahooksjs/use-url-state": "^2.5.6",
@@ -92,14 +84,9 @@
         "babel-plugin-prismjs": "^2.0.1",
         "cross-env": "^7.0.3",
         "dtsgenerator": "2.7.0",
-        "lint-staged": "^10.0.7",
         "prettier": "^2.2.0",
         "react": "17.x",
         "react-dom": "17.x",
-        "typescript": "^4.1.2",
-        "yorkie": "^2.0.0"
-    },
-    "engines": {
-        "node": ">=16.11.0"
+        "typescript": "^4.1.2"
     }
 }
