--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -13,19 +15,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+
+      - name: Set node
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
+          node-version: 16.x
+          cache: pnpm
 
       - name: Install and Build 🔧
         run: |
-          cat customConfig.ts
-          yarn
-          yarn build
+          pnpm i
+          pnpm build
 
       - name: Minify HTML Index
         uses: Dup4/minify-html-action@v1
         with:
           src: './dist/index.html'
+
+      - name: Enable 404.html
+        run: |
+          cp ./dist/index.html ./dist/404.html
