--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@judgeq/ui",
     "version": "0.0.74.18",
+    "packageManager": "pnpm@7.1.5",
     "description": "The WebApp of JudgeQ",
     "repository": "https://github.com/JudgeQ-Dev/ui",
     "author": "Dup4",
@@ -21,6 +22,7 @@
     },
     "dependencies": {
         "@ahooksjs/use-url-state": "^2.5.6",
+        "@ant-design/icons": "^4.0.0",
         "@ant-design/pro-layout": "^6.5.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
         "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -39,9 +41,11 @@
         "class-validator": "^0.13.1",
         "css-element-queries": "^1.2.3",
         "dayjs": "^1.10.4",
+        "dva-core": "^1.1.0",
         "highcharts": "^9.0.1",
         "highcharts-react-official": "^3.0.0",
         "immutability-helper": "^3.1.1",
+        "lodash": "^4.17.21",
         "markdown-it": "^12.0.4",
         "markdown-it-container": "^3.0.0",
         "markdown-it-math-loose": "^4.1.1",
@@ -49,6 +53,8 @@
         "markdown-it-merge-cells": "^1.0.1",
         "markdown-it-toc-and-anchor": "^4.2.0",
         "mathjax-full": "^3.1.2",
+        "moment": "^2.29.3",
+        "monaco-editor": "0.24.x",
         "monaco-editor-webpack-plugin": "^3.0.0",
         "p-all": "^3.0.0",
         "prismjs": "^1.23.0",
@@ -58,10 +64,13 @@
         "react-google-recaptcha-v3": "^1.8.0",
         "react-highlight-words": "^0.17.0",
         "react-monaco-editor": "^0.42.0",
+        "react-router": "5.0.0",
         "react-sortable-hoc": "^2.0.0",
         "react-tooltip": "^4.2.15",
+        "redbox-react": "1.x",
         "twemoji": "^13.0.1",
         "umi": "^3.3.7",
+        "umi-request": "^1.4.0",
         "uuid": "^8.3.2",
         "validator": "^13.5.2",
         "xss": "^1.0.8"
@@ -84,9 +93,11 @@
         "babel-plugin-prismjs": "^2.0.1",
         "cross-env": "^7.0.3",
         "dtsgenerator": "2.7.0",
+        "pnpm": "^7.1.5",
         "prettier": "^2.2.0",
         "react": "17.x",
         "react-dom": "17.x",
-        "typescript": "^4.1.2"
+        "typescript": "^4.1.2",
+        "webpack": "^5.0.0"
     }
 }
