--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
         "dist"
     ],
     "scripts": {
-        "start": "cross-env umi dev",
-        "start:no-mock": "cross-env MOCK=none umi dev",
-        "start:no-ui": "cross-env UMI_UI=none umi dev",
-        "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 umi build",
-        "generate-api": "node scripts/generate-api.js http://localhost:3000/api/docs-json",
         "postinstall": "bash scripts/get_public_assets.sh && umi generate tmp",
-        "prettier": "prettier --write 'src/**/*.{js,jsx,tsx,less,md,json}' && prettier --write --parser=typescript 'src/**/*.ts?(x)'",
+        "generate-api": "node scripts/generate-api.js http://localhost:3000/api/docs-json",
+        "dev": "umi dev",
+        "start": "umi dev",
+        "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 UMI_ENV=build umi build",
+        "lint": "run-p lint:*",
+        "lint:style": "prettier --check src/",
+        "format": "run-p format:*",
+        "format:style": "prettier --write src/",
         "test": "umi-test",
         "test:coverage": "umi-test --coverage"
     },
@@ -58,10 +60,10 @@
         "p-all": "^3.0.0",
         "prismjs": "^1.23.0",
         "react": "17.x",
-        "react-dom": "17.x",
         "react-calendar-heatmap": "^1.8.1",
         "react-dnd": "^14.0.2",
         "react-dnd-html5-backend": "^14.0.0",
+        "react-dom": "17.x",
         "react-google-recaptcha-v3": "^1.8.0",
         "react-highlight-words": "^0.17.0",
         "react-monaco-editor": "^0.42.0",
@@ -77,6 +79,7 @@
         "xss": "^1.0.8"
     },
     "devDependencies": {
+        "@types/array-move": "^2.0.0",
         "@types/blueimp-md5": "^2.7.0",
         "@types/immutability-helper": "^2.6.3",
         "@types/markdown-it": "^12.0.1",
@@ -84,21 +87,21 @@
         "@types/prismjs": "^1.16.3",
         "@types/react": "^17.0.3",
         "@types/react-calendar-heatmap": "^1.6.2",
+        "@types/react-dnd": "^3.0.2",
         "@types/react-dnd-html5-backend": "^3.0.2",
         "@types/react-dom": "^16.9.0",
+        "@types/react-sortable-hoc": "^0.7.1",
         "@types/react-tooltip": "^4.2.4",
         "@types/uuid": "^8.3.0",
-        "@types/array-move": "^2.0.0",
-        "@types/react-dnd": "^3.0.2",
-        "@types/react-sortable-hoc": "^0.7.1",
         "@types/validator": "^13.1.3",
-        "@umijs/preset-ui": "^2.2.9",
         "@umijs/preset-react": "1.x",
+        "@umijs/preset-ui": "^2.2.9",
         "@umijs/test": "^3.3.7",
         "babel-plugin-import": "^1.13.3",
         "babel-plugin-prismjs": "^2.0.1",
         "cross-env": "^7.0.3",
         "dtsgenerator": "2.7.0",
+        "npm-run-all": "^4.1.5",
         "pnpm": "^7.1.5",
         "prettier": "^2.2.0",
         "typescript": "^4.1.2",
