--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "test:coverage": "umi-test --coverage"
     },
     "dependencies": {
-        "@ahooksjs/use-url-state": "^2.5.6",
+        "@ahooksjs/use-url-state": "^2.5.12",
         "@ant-design/icons": "^4.0.0",
         "@ant-design/pro-layout": "^6.5.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -67,10 +67,10 @@
         "react-google-recaptcha-v3": "^1.8.0",
         "react-highlight-words": "^0.17.0",
         "react-monaco-editor": "^0.42.0",
-        "react-router": "5.0.0",
+        "react-router": "6.3.0",
         "react-sortable-hoc": "^2.0.0",
         "react-tooltip": "^4.2.15",
-        "redbox-react": "1.x",
+        "redbox-react": "1.6.0",
         "twemoji": "^13.0.1",
         "umi": "^3.5.24",
         "umi-request": "^1.4.0",
@@ -96,15 +96,15 @@
         "@types/validator": "^13.1.3",
         "@umijs/preset-react": "1.x",
         "@umijs/preset-ui": "^2.2.9",
-        "@umijs/test": "^3.3.7",
+        "@umijs/test": "^3.5.24",
         "babel-plugin-import": "^1.13.3",
         "babel-plugin-prismjs": "^2.0.1",
         "cross-env": "^7.0.3",
         "dtsgenerator": "2.7.0",
         "npm-run-all": "^4.1.5",
         "pnpm": "^7.1.5",
-        "prettier": "^2.2.0",
-        "typescript": "^4.1.2",
+        "prettier": "^2.6.2",
+        "typescript": "^4.6.4",
         "webpack": "^5.0.0"
     }
 }
