--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "mathjax-full": "^3.1.2",
+    "mathjax-full": "3.2.0",
     "moment": "^2.29.3",
     "monaco-editor": "0.24.x",
     "monaco-editor-webpack-plugin": "^3.0.0",
@@ -82,6 +82,7 @@
     "@types/array-move": "^2.0.0",
     "@types/blueimp-md5": "^2.7.0",
     "@types/immutability-helper": "^2.6.3",
+    "@types/lodash": "^4.14.182",
     "@types/markdown-it": "^12.0.1",
     "@types/markdown-it-container": "^2.0.3",
     "@types/prismjs": "^1.16.3",
