fix: monaco editor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,8 @@
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "sourceMap": true,
-    "strict": false,
+    "strict": true,
     "allowJs": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "isolatedModules": true,
-    "noFallthroughCasesInSwitch": false,
-    "strictBindCallApply": true,
-    "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "suppressImplicitAnyIndexErrors": true,
     "baseUrl": "./",
