--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
   "cSpell.words": [
     "antd",
     "judgeq",
-    "pnpm"
+    "pnpm",
+    "prismjs"
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
   "[typescript]": {
