--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@judgeq/ui",
   "version": "0.0.74",
-  "packageManager": "pnpm@7.1.5",
+  "packageManager": "pnpm@7.1.6",
   "description": "The WebApp of JudgeQ",
   "repository": "https://github.com/JudgeQ-Dev/ui",
   "author": "Dup4",
@@ -55,8 +55,8 @@
     "markdown-it-toc-and-anchor": "^4.2.0",
     "mathjax-full": "3.2.0",
     "moment": "^2.29.3",
-    "monaco-editor": "0.24.x",
-    "monaco-editor-webpack-plugin": "^3.0.0",
+    "monaco-editor": "0.22.3",
+    "monaco-editor-webpack-plugin": "3.0.0",
     "p-all": "^3.0.0",
     "prismjs": "^1.23.0",
     "react": "17.x",
@@ -102,7 +102,7 @@
     "cross-env": "^7.0.3",
     "dtsgenerator": "2.7.0",
     "npm-run-all": "^4.1.5",
-    "pnpm": "^7.1.5",
+    "pnpm": "^7.1.6",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
     "webpack": "^5.0.0"
