chore: support Docker

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
   "files.trimFinalNewlines": true,
   "cSpell.words": [
     "antd",
+    "buildx",
+    "DOCKERHUB",
     "judgeq",
     "pnpm",
     "prismjs"
