--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "mathjax-full": "3.2.0",
+    "mathjax-render": "^0.0.11",
     "moment": "^2.29.3",
     "monaco-editor": "0.22.3",
     "monaco-editor-webpack-plugin": "3.0.0",
